# lucky-commit

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE.md  Makefile  README.md  build.rs  index.js  lucky-commit.c  package.json
.github/workflows/: ci.yml
src/: benchmark.rs  bin.rs  lib.rs  main.rs  padding.rs  sha1_matcher.cl  sha1_prefix_matcher.cl  sha256_matcher.cl  sha256_prefix_matcher.cl  tests.rs
