[package]
name = "lucky_commit"
version = "1.0.5"
authors = ["Teddy Katz <teddy.katz@gmail.com>"]
edition = "2018"
description = "Make your git commits lucky!"
repository = "https://github.com/not-an-aardvark/lucky-commit"
license = "MIT"

[lib]
name = "lucky_commit_lib"
path = "src/lib.rs"

[[bin]]
name = "lucky_commit"
path = "src/bin.rs"

[dependencies]

num_cpus = "1.0"
"sha-1" = { version = "0.9", features = ["std", "asm", "compress"] }
ocl = "0.19"
