[package]
name = "lucky_commit"
version = "2.0.3"
authors = ["Teddy Katz <teddy.katz@gmail.com>"]
edition = "2018"
description = "Make your git commits lucky!"
repository = "https://github.com/not-an-aardvark/lucky-commit"
license = "MIT"

[lib]
name = "lucky_commit"
path = "src/lib.rs"

[features]
default = ["opencl"]
opencl = ["ocl"]

[[bin]]
name = "lucky_commit"
path = "src/bin.rs"

[build-dependencies]
ocl = { version = "0.19", optional = true }

[dependencies]

num_cpus = "1.0"
"sha-1" = { version = "0.9", "default-features" = false, features = ["asm", "compress"] }
ocl = { version = "0.19", optional = true }

[profile.release]
lto = true
