[package]
name = "lucky_commit"
version = "2.2.4"
authors = ["Teddy Katz <teddy.katz@gmail.com>"]
edition = "2018"
description = "Make your git commits lucky!"
repository = "https://github.com/not-an-aardvark/lucky-commit"
license = "MIT"
resolver = "2"
rust-version = "1.57.0"
include = ["src/**/*", "Cargo.*", "LICENSE.md", "README.md"]

[lib]
name = "lucky_commit"
path = "src/lib.rs"

[features]
default = ["opencl"]
opencl = ["ocl"]

[[bin]]
name = "lucky_commit"
path = "src/bin.rs"

[dependencies]
num_cpus = "1.0"
ocl = { version = "0.19", optional = true }

# See https://github.com/RustCrypto/hashes/issues/315
[target.'cfg(target_os = "windows")'.dependencies]
"sha-1" = { version = "0.10", "default-features" = false, features = ["compress"] }
"sha2" = { version = "0.10", "default-features" = false, features = ["compress"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
"sha-1" = { version = "0.10", "default-features" = false, features = ["asm", "compress"] }
"sha2" = { version = "0.10", "default-features" = false, features = ["asm", "compress"] }

[profile.release]
lto = true
